test/TestPhases/exportinference/invalid/structwithinit.blc
module exposes S, MY_VALUE


typealias MyInt = int32  // must not be abstract

const MY_VALUE: int32 = 42

struct S 
    var x: MyInt = MY_VALUE * 2
    var y: bool
extension 
    function f () returns MyInt
        return MY_VALUE
    end
end